--- a/src/main/resources/grabber.properties
+++ b/src/main/resources/grabber.properties
@@ -3,3 +3,4 @@ db.url=jdbc:postgresql://127.0.0.1:5432/grabber
 db.username=postgres
 db.password=password
 db.driver=org.postgresql.Driver
+port=9000
